--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       "methods": ["GET", "PATCH", "DELETE", "POST", "PUT"],
       "headers": [
         {
-          "source": "/api/(.*)",
+          "source": "/(.*)",
           "headers": [
             { "key": "Access-Control-Allow-Credentials", "value": "true" },
             { "key": "Access-Control-Allow-Origin", "value": "*" },
